k8s-training/hands-on1-solution/04_deployment-cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: index-cm-volume
          configMap: 
            name: index-cm
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
          - name: index-cm-volume
            mountPath: /usr/share/nginx/html
