k8s-training/hands-on1-solution/03_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx-loldiges.apps.training.iot.spirit21.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 8080
        pathType: ImplementationSpecific
